# ytmanager

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  design_patterns_guidelines.md  project_overview.md  suggested_commands.md  system_utilities.md  task_completion_workflow.md
ytmanager/: README.md  pyproject.toml
ytmanager/config/: channels.yaml
ytmanager/src/analytics/: __main__.py  metrics.py  youtube_api.py
ytmanager/src/channels/: launcher.py  registry.py
ytmanager/src/optimizer/: __main__.py  ab_test.py  feedback_loop.py  prompt_tuner.py
ytmanager/src/scheduler/: __main__.py  cron_manager.py  queue.py  series_manager.py
